--- a/static/index.html
+++ b/static/index.html
@@ -34,7 +34,7 @@
       </div>
     </nav>
 
-    <div class="container">
+    <div class="container-fluid">
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-12">
