--- a/static/index.html
+++ b/static/index.html
@@ -35,15 +35,21 @@
     </nav>
 
     <div class="container-fluid">
-      <!-- Example row of columns -->
+
       <div class="row">
         <div class="col-md-12">
           <div class="well">
             <div class=" btn-group" role="group" aria-label="...">
-            <button id="split_button" type="button" class="btn btn-default">Split</button>
-            <button id="combine_button" type="button" class="btn btn-default">Combine</button>
+              <button id="split_button" type="button" class="btn btn-default">Split</button>
+              <button id="combine_button" type="button" class="btn btn-default">Combine</button>
+              <button type="button" class="btn btn-default dictate-button">Dictate</button>
+            </div>
           </div>
-          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12">
           <div class="well">
           <form class="all-sentences">
           </form>
