Add prototype code to get audio data for text

--- a/static/index.html
+++ b/static/index.html
@@ -42,7 +42,9 @@
             <div class=" btn-group" role="group" aria-label="...">
               <button id="split_button" type="button" class="btn btn-default">Split</button>
               <button id="combine_button" type="button" class="btn btn-default">Combine</button>
-              <button type="button" class="btn btn-default dictate-button">Dictate</button>
+              <button id="read_button" type="button" class="btn btn-default dictate-button">Read</button>
+            </div>
+            <div id="audio">
             </div>
           </div>
         </div>
