--- a/static/index.html
+++ b/static/index.html
@@ -37,16 +37,22 @@
     <div class="container-fluid">
 
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-8">
           <div class="well">
             <div class=" btn-group" role="group" aria-label="...">
               <button id="split_button" type="button" class="btn btn-default">Split</button>
               <button id="combine_button" type="button" class="btn btn-default">Combine</button>
-              <button id="read_button" type="button" class="btn btn-default dictate-button">Read</button>
+              <button id="read_all_button" type="button" class="btn btn-default dictate-button">Read All</button>
             </div>
-            <div id="audio">
-            </div>
+
           </div>
+        </div>
+        <div class="col-md-4">
+          <div class="well">
+          <div id="audio">
+
+          </div>
+        </div>
         </div>
       </div>
 
