change default voice to Salli

--- a/static/index.html
+++ b/static/index.html
@@ -46,11 +46,10 @@
             </div>
             <div class="btn-group" role="group">
               <button id="voice_name" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Allison
+                Salli
                 <span class="caret"></span>
               </button>
               <ul class="dropdown-menu">
-                <li><a class="voice-selection" id="allison" href="#">Allison</a></li>
                 <li><a class="voice-selection" id="salli" href="#">Salli</a></li>
                 <li><a class="voice-selection" id="kimberly" href="#">Kimberly</a></li>
                 <li><a class="voice-selection" id="kendra" href="#">Kendra</a></li>
@@ -58,6 +57,7 @@
                 <li><a class="voice-selection" id="emma" href="#">Emma</a></li>
                 <li><a class="voice-selection" id="amy" href="#">Amy</a></li>
                 <li><a class="voice-selection" id="nicole" href="#">Nicole</a></li>
+                <li><a class="voice-selection" id="allison" href="#">Allison</a></li>
               </ul>
             </div>
           </div>
